--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.github.traex.rippleeffect:library:1.2.3'
 }
