--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.github.traex.rippleeffect:library:1.2.3'
     compile 'com.mcxiaoke.volley:library:1.0.11'
+    compile 'org.json:json:20141113'
 }
