--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/spring.schemas'
+        exclude 'META-INF/spring.handlers'
+        exclude 'META-INF/spring.tooling'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+    }
 }
 
 dependencies {
@@ -27,4 +35,6 @@ dependencies {
     compile 'com.github.traex.rippleeffect:library:1.2.3'
     compile 'com.mcxiaoke.volley:library:1.0.11'
     compile 'org.json:json:20141113'
+    compile 'org.springframework.webflow:spring-webflow:2.4.0.RELEASE'
+    compile 'org.springframework:spring-context:4.1.5.RELEASE'
 }
