--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'org.json:json:20141113'
     compile 'org.springframework.webflow:spring-webflow:2.4.0.RELEASE'
     compile 'org.springframework:spring-context:4.1.5.RELEASE'
+    compile 'com.squareup.picasso:picasso:2.5.0'
 }
