--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'org.springframework.webflow:spring-webflow:2.4.0.RELEASE'
     compile 'org.springframework:spring-context:4.1.5.RELEASE'
     compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'com.melnykov:floatingactionbutton:1.2.0'
 }
