--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,16 @@ android {
         exclude 'META-INF/spring.tooling'
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/license.txt'
+        exclude 'META-INF/LICENSE'
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.android.support:cardview-v7:21.0.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.github.traex.rippleeffect:library:1.2.3'
@@ -39,4 +43,5 @@ dependencies {
     compile 'org.springframework:spring-context:4.1.5.RELEASE'
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.melnykov:floatingactionbutton:1.2.0'
+    compile 'com.google.android.gms:play-services-base:6.5.87'
 }
