--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.melnykov:floatingactionbutton:1.2.0'
     compile 'com.google.android.gms:play-services-base:6.5.87'
+    compile 'it.neokree:MaterialTabs:0.11'
 }
